syntax = "proto3";
package ThermalPowerPlantPackage;

message ElectionRequest {

  enum Status {
    ELECTION = 0;
    ELECTED = 1;
  }

  int32 winningId = 1; // Id centrale vincente
  int32 starterId = 2;
  float price = 3; // prezzo offerto dalla centrale
  Status status = 4; // stato del sistema
  int32 quantity = 5; // quantit√† di energia

}

message ElectionResponse {
  bool success = 1;
}

service ElectionService {
  rpc handleElection(ElectionRequest) returns (ElectionResponse);
}

